--- a/group-sorter.html
+++ b/group-sorter.html
@@ -10,7 +10,7 @@
   <body>
     <label>
       <div>Enter text:</div>
-      <textarea id="input" rows="10"></textarea>
+      <textarea id="input" rows="10" autofocus></textarea>
     </label>
 
     <button id="copy-to-clipboard">Copy to Clipboard</button>
