use relative path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>i'll dump random stuff here when i feel like it</p>
     <ul>
       <li>
-        <a href="/group-sorter.html">group sorter</a>
+        <a href="./group-sorter.html">group sorter</a>
       </li>
     </ul>
   </body>
