sort with lowercase

--- a/group-sorter.html
+++ b/group-sorter.html
@@ -30,7 +30,7 @@
         .trim()
         .split(/(?:\r?\n){2,}/)
         .filter(Boolean)
-        .sort()
+        .sort((a, b) => a.toLocaleLowerCase().localeCompare(b.toLowerCase()))
         .join("\n\n")
     }
 
