add vite/tailwind, spruce up the group sorter a bit

--- a/group-sorter.html
+++ b/group-sorter.html
@@ -1,22 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-900 text-gray-50">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>group sorter</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./tailwind.css" />
+
+    <title>paragraph sorter</title>
   </head>
 
-  <body>
-    <label>
-      <div>Enter text:</div>
-      <textarea id="input" rows="10" autofocus></textarea>
-    </label>
+  <body class="space-y-4 p-4 max-w-screen-md mx-auto">
+    <p>
+      Enter a block of text to sort all the paragraphs alphabetically.
+      Paragraphs are separated by new lines
+    </p>
 
-    <button id="copy-to-clipboard">Copy to Clipboard</button>
+    <textarea
+      aria-label="Input"
+      id="input"
+      rows="10"
+      autofocus
+      class="
+        block
+        shadow-inner
+        rounded-md
+        w-full
+        bg-gray-800
+        border-0
+        px-3
+        py-2
+        focus:outline-none focus:ring-2
+      "
+    ></textarea>
+
+    <button
+      id="copy-to-clipboard"
+      class="
+        bg-blue-600
+        text-white
+        px-3
+        py-2
+        rounded-md
+        transition-colors
+        hover:bg-blue-700
+        focus:outline-none focus:ring-2
+      "
+    >
+      Copy to Clipboard
+    </button>
     <p id="copied-message" hidden>Copied!</p>
 
-    <p id="output"></p>
+    <p
+      id="output"
+      class="
+        whitespace-pre-line
+        block
+        shadow-inner
+        rounded-md
+        w-full
+        bg-gray-800
+        border-0
+        px-3
+        py-2
+        before:italic before:opacity-50
+        empty:before:content-[attr(data-empty)]
+      "
+      data-empty="Nothing yet!"
+    ></p>
   </body>
 
   <script type="module">
@@ -47,15 +102,4 @@
       }, 1000)
     }
   </script>
-
-  <style>
-    textarea {
-      display: block;
-      width: 100%;
-    }
-
-    #output {
-      white-space: pre-line;
-    }
-  </style>
 </html>
